cards and things of that nature

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <button>Add book</button>
+    <button class="display">Display library</button>
+
+    <div class="cards"></div>
     <script src="test.js"></script>
   </body>
 </html>
