--- a/index.html
+++ b/index.html
@@ -7,9 +7,25 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <dialog>
+      <button autofocus>Close</button>
+      <form action="">
+        <div class="form-content">
+          <label for="title">Title</label>
+          <input type="text" name="title" id="title" />
+          <label for="author">Author</label>
+          <input type="text" name="author" id="author " />
+          <label for="pages">Pages</label>
+          <input type="number" name="pages" id="pages" />
+          <label for="read">Pages Read</label>
+          <input type="number" name="read" id="read" />
+          <button class="submit" value="Submit">Submit</button>
+        </div>
+      </form>
+    </dialog>
+
     <button>Add book</button>
     <button class="display">Display library</button>
-
     <div class="cards"></div>
     <script src="test.js"></script>
   </body>
