refactor to class

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     <button>Add book</button>
     <button class="display">Display library</button>
     <div class="cards"></div>
-    <script src="test.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
